--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -3,28 +3,67 @@
  * 00.00 TOC
  *
  * 00.01 GLOBAL & IMPORTS
+ * 01.00 Timer Section
  *
  */
 /** 00.01 GLOBAL & IMPORTS **/
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/solid.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/regular.min.css");
-/* line 19, ../sass/style.scss */
+/* line 20, ../sass/style.scss */
 * {
-  background: #333;
   box-sizing: border-box;
-  color: #fff;
+  color: #333;
   position: relative;
 }
 
-/* line 27, ../sass/style.scss */
-html, body {
+/* line 29, ../sass/style.scss */
+ul, li {
   margin: 0;
   padding: 0;
 }
 
-/* line 32, ../sass/style.scss */
-i {
-  color: #00ff00;
-  font-size: 20px;
+/* line 34, ../sass/style.scss */
+html, body {
+  background: #f5f5f5;
+  margin: 0;
+  padding: 0;
+}
+
+/** 01.00 Timer Section **/
+/* line 41, ../sass/style.scss */
+section[id="timer-container"] {
+  background: #3fed3f;
+}
+
+/* line 46, ../sass/style.scss */
+ul[id="timer-display"] {
+  display: flex;
+  justify-content: center;
+  padding: 15px 0 15px 0;
+}
+/* line 52, ../sass/style.scss */
+ul[id="timer-display"] li {
+  list-style-type: none;
+  padding: 20px;
+}
+/* line 57, ../sass/style.scss */
+ul[id="timer-display"] .timer-btn {
+  line-height: 60px;
+}
+
+/* line 62, ../sass/style.scss */
+li[role="time"] time {
+  cursor: pointer;
+  font-family: DIN Alternate;
+  font-size: 50px;
+}
+
+/* line 68, ../sass/style.scss */
+li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
+  border: 3px solid #4f4f4f;
+  border-radius: 100%;
+  color: #4f4f4f;
+  cursor: pointer;
+  padding: 8px;
 }
