--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -1,10 +1,11 @@
-// !IMPORTANT DO NOT EDIT DIRECTLY, THIS DOC IS MAINTAINED WITH SASS
+// !!IMPORTANT DO NOT EDIT CSS DIRECTLY, MAINTAIN WITH SASS!!
 
 /*
  *
  * 00.00 TOC
  *
  * 00.01 GLOBAL & IMPORTS
+ * 01.00 Timer Section
  *
  */
 
@@ -17,19 +18,59 @@
  @import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/regular.min.css');
 
  *{
-     background : #333;
      box-sizing : border-box;
-     color      : #fff;
+     color      : #333;
      position   : relative;
 
  }
- 
- html, body{
+
+
+
+ ul, li{
      margin  : 0;
      padding : 0;
  }
-
- i{
-     color     : #00ff00;
-     font-size : 20px;
+ 
+ html, body{
+     background : #f5f5f5;
+     margin     : 0;
+     padding    : 0;
  }
+
+ /** 01.00 Timer Section **/
+ section[id="timer-container"]{
+  background: #3fed3f;
+
+}
+
+ul[id="timer-display"]{
+    display         : flex;
+    
+    justify-content : center;
+    padding         : 15px 0 15px 0;
+    
+    li{
+        list-style-type : none;
+        padding         : 20px;
+    }
+
+    .timer-btn{
+        line-height: 60px;
+    }
+}
+
+li[role="time"] time{
+    cursor      : pointer;
+    font-family : DIN Alternate;
+    font-size   : 50px;
+}
+
+li[role="stop-time-btn"] i, li[role="pause-time-btn"] i{
+    $color        : #4f4f4f;
+    
+    border        : 3px solid $color;
+    border-radius : 100%;
+    color         : $color;
+    cursor        : pointer;
+    padding       : 8px;
+}
