--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -4,26 +4,35 @@
  *
  * 00.01 GLOBAL & IMPORTS
  * 01.00 Timer Section
+ * 01.01 Focus Button List
  *
  */
 /** 00.01 GLOBAL & IMPORTS **/
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/solid.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/regular.min.css");
-/* line 20, ../sass/style.scss */
+/* line 21, ../sass/style.scss */
 * {
   box-sizing: border-box;
   color: #333;
   position: relative;
 }
 
-/* line 29, ../sass/style.scss */
+/* line 30, ../sass/style.scss */
 ul, li {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 
-/* line 34, ../sass/style.scss */
+/* line 36, ../sass/style.scss */
+button {
+  border: 0;
+  background: inherit;
+  cursor: pointer;
+}
+
+/* line 42, ../sass/style.scss */
 html, body {
   background: #f5f5f5;
   margin: 0;
@@ -31,39 +40,77 @@ html, body {
 }
 
 /** 01.00 Timer Section **/
-/* line 41, ../sass/style.scss */
+/* line 49, ../sass/style.scss */
 section[id="timer-container"] {
   background: #3fed3f;
 }
 
-/* line 46, ../sass/style.scss */
+/* line 54, ../sass/style.scss */
 ul[id="timer-display"] {
   display: flex;
   justify-content: center;
   padding: 15px 0 15px 0;
 }
-/* line 52, ../sass/style.scss */
+/* line 60, ../sass/style.scss */
 ul[id="timer-display"] li {
   list-style-type: none;
   padding: 20px;
 }
-/* line 57, ../sass/style.scss */
+/* line 65, ../sass/style.scss */
 ul[id="timer-display"] .timer-btn {
   line-height: 60px;
 }
 
-/* line 62, ../sass/style.scss */
+/* line 70, ../sass/style.scss */
 li[role="time"] time {
   cursor: pointer;
   font-family: DIN Alternate;
   font-size: 50px;
 }
 
-/* line 68, ../sass/style.scss */
+/* line 76, ../sass/style.scss */
 li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
-  border: 3px solid #4f4f4f;
+  border: 3px solid #333;
   border-radius: 100%;
-  color: #4f4f4f;
+  color: #333;
   cursor: pointer;
   padding: 8px;
+}
+
+/* line 86, ../sass/style.scss */
+div[role="progress-bar-track"] {
+  height: 10px;
+  width: 100%;
+  background: rgba(17, 17, 17, 0.2);
+}
+/* line 92, ../sass/style.scss */
+div[role="progress-bar-track"] span[role="progress-bar"] {
+  display: block;
+  height: 100%;
+  width: 30%;
+  background: rgba(17, 17, 17, 0.5);
+}
+
+/** 01.01 Focus Button List **/
+/* line 103, ../sass/style.scss */
+ul[id="focus-btn-list"] {
+  background: rgba(9, 194, 40, 0.7);
+  display: flex;
+  justify-content: center;
+  padding: 15px 0;
+}
+/* line 110, ../sass/style.scss */
+ul[id="focus-btn-list"] button {
+  display: flex;
+  width: 180px;
+  font-size: 16px;
+}
+/* line 117, ../sass/style.scss */
+ul[id="focus-btn-list"] span {
+  width: 100%;
+  text-align: center;
+}
+/* line 122, ../sass/style.scss */
+ul[id="focus-btn-list"] span i {
+  margin-right: 5px;
 }
