--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -5,70 +5,88 @@
  * 00.01 GLOBAL & IMPORTS
  * 01.00 Timer Section
  * 01.01 Focus Button List
+ * 02.00 Task list Container
  *
  */
 /** 00.01 GLOBAL & IMPORTS **/
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/fontawesome.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/solid.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/regular.min.css");
-/* line 21, ../sass/style.scss */
+@import url("https://fonts.googleapis.com/css?family=PT+Sans&display=swap");
+/* line 24, ../sass/style.scss */
 * {
   box-sizing: border-box;
   color: #333;
   position: relative;
 }
 
-/* line 30, ../sass/style.scss */
+/* line 31, ../sass/style.scss */
+textarea,
+select,
+input,
+button {
+  outline: none;
+}
+
+/* line 38, ../sass/style.scss */
 ul, li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-/* line 36, ../sass/style.scss */
+/* line 44, ../sass/style.scss */
 button {
   border: 0;
   background: inherit;
   cursor: pointer;
 }
 
-/* line 42, ../sass/style.scss */
+/* line 50, ../sass/style.scss */
 html, body {
+  height: 100%;
+  width: 100%;
   background: #f5f5f5;
   margin: 0;
   padding: 0;
 }
 
+/* line 59, ../sass/style.scss */
+body {
+  display: flex;
+  flex-direction: column;
+}
+
 /** 01.00 Timer Section **/
-/* line 49, ../sass/style.scss */
+/* line 66, ../sass/style.scss */
 section[id="timer-container"] {
   background: #3fed3f;
 }
 
-/* line 54, ../sass/style.scss */
+/* line 71, ../sass/style.scss */
 ul[id="timer-display"] {
   display: flex;
   justify-content: center;
   padding: 15px 0 15px 0;
 }
-/* line 60, ../sass/style.scss */
+/* line 77, ../sass/style.scss */
 ul[id="timer-display"] li {
   list-style-type: none;
   padding: 20px;
 }
-/* line 65, ../sass/style.scss */
+/* line 82, ../sass/style.scss */
 ul[id="timer-display"] .timer-btn {
   line-height: 60px;
 }
 
-/* line 70, ../sass/style.scss */
+/* line 87, ../sass/style.scss */
 li[role="time"] time {
   cursor: pointer;
   font-family: DIN Alternate;
   font-size: 50px;
 }
 
-/* line 76, ../sass/style.scss */
+/* line 93, ../sass/style.scss */
 li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
   border: 3px solid #333;
   border-radius: 100%;
@@ -77,13 +95,13 @@ li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
   padding: 8px;
 }
 
-/* line 86, ../sass/style.scss */
+/* line 103, ../sass/style.scss */
 div[role="progress-bar-track"] {
   height: 10px;
   width: 100%;
   background: rgba(17, 17, 17, 0.2);
 }
-/* line 92, ../sass/style.scss */
+/* line 109, ../sass/style.scss */
 div[role="progress-bar-track"] span[role="progress-bar"] {
   display: block;
   height: 100%;
@@ -92,25 +110,81 @@ div[role="progress-bar-track"] span[role="progress-bar"] {
 }
 
 /** 01.01 Focus Button List **/
-/* line 103, ../sass/style.scss */
+/* line 120, ../sass/style.scss */
 ul[id="focus-btn-list"] {
   background: rgba(9, 194, 40, 0.7);
   display: flex;
   justify-content: center;
   padding: 15px 0;
 }
-/* line 110, ../sass/style.scss */
+/* line 127, ../sass/style.scss */
 ul[id="focus-btn-list"] button {
   display: flex;
   width: 180px;
   font-size: 16px;
 }
-/* line 117, ../sass/style.scss */
+/* line 134, ../sass/style.scss */
 ul[id="focus-btn-list"] span {
   width: 100%;
   text-align: center;
 }
-/* line 122, ../sass/style.scss */
+/* line 139, ../sass/style.scss */
 ul[id="focus-btn-list"] span i {
   margin-right: 5px;
+}
+
+/** 02.00 Task list Container **/
+/* line 147, ../sass/style.scss */
+section[id="task-list-container"] {
+  flex-grow: 2;
+  padding: 10px;
+  padding-bottom: 0;
+}
+
+/* line 153, ../sass/style.scss */
+ul[id="task-list"] {
+  height: 100%;
+  width: 100%;
+  border: 2px solid #dfdfdf;
+  background: #fff;
+  font-family: "PT Sans", Courier, monospace;
+}
+/* line 162, ../sass/style.scss */
+ul[id="task-list"] li {
+  display: flex;
+  border-bottom: 1px dotted #dfdfdf;
+  font-size: 13px;
+  padding: 10px;
+}
+/* line 169, ../sass/style.scss */
+ul[id="task-list"] li span {
+  width: 70%;
+}
+
+/* line 176, ../sass/style.scss */
+ul[class="task-specific-btn-list"] {
+  display: flex;
+  flex-grow: 1;
+}
+/* line 181, ../sass/style.scss */
+ul[class="task-specific-btn-list"] li {
+  display: block;
+  background: #54e054;
+  border: 0;
+  border-radius: 4px;
+  cursor: pointer;
+  margin-left: auto;
+  margin-right: 2px;
+  padding: 12px;
+}
+/* line 193, ../sass/style.scss */
+ul[class="task-specific-btn-list"] li[role="focus-btn"] {
+  background: #333;
+  color: #fff;
+}
+/* line 198, ../sass/style.scss */
+ul[class="task-specific-btn-list"] li[role="multi-btn"] {
+  background: transparent;
+  border: 2px solid #aaa;
+  color: #bbb;
 }
