--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -7,6 +7,7 @@
  * 00.01 GLOBAL & IMPORTS
  * 01.00 Timer Section
  * 01.01 Focus Button List
+ * 02.00 Task list Container
  *
  */
 
@@ -14,9 +15,11 @@
 
  $nodeModules: '../../../node_modules';
  
- @import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/fontawesome.min.css');
- @import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/solid.min.css');
- @import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/regular.min.css');
+@import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/fontawesome.min.css');
+@import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/solid.min.css');
+@import url('#{$nodeModules}/@fortawesome/fontawesome-free/css/regular.min.css');
+
+@import url('https://fonts.googleapis.com/css?family=PT+Sans&display=swap');
 
  *{
      box-sizing : border-box;
@@ -25,7 +28,12 @@
 
  }
 
-
+textarea,
+select,
+input,
+button {
+    outline: none;
+}
 
  ul, li{
      margin     : 0;
@@ -40,9 +48,18 @@
  }
  
  html, body{
+     height     : 100%;
+     width      : 100%;
+     
      background : #f5f5f5;
      margin     : 0;
      padding    : 0;
+ }
+
+ body{
+     display        : flex;
+
+     flex-direction :  column;
  }
 
  /** 01.00 Timer Section **/
@@ -122,5 +139,65 @@ ul[id="focus-btn-list"]{
         i{
             margin-right: 5px;
         }
+    }
+}
+
+/** 02.00 Task list Container **/
+
+section[id="task-list-container"]{
+    flex-grow      : 2;
+    padding        : 10px;
+    padding-bottom :  0;
+}
+
+ul[id="task-list"]{
+    height: 100%;
+    width: 100%;
+
+    border: 2px solid #dfdfdf;
+    background: #fff;
+    // border-radius: 4px 4px 0 0;
+    font-family: "PT Sans", Courier, monospace;
+
+    li{
+        display: flex;
+        
+        border-bottom : 1px dotted #dfdfdf;
+        font-size     : 13px;
+        padding       : 10px;
+        
+        span{
+            // width: calc((100% / 3) * 2);
+            width: 70%;
+        }
+    }
+}
+
+ul[class="task-specific-btn-list"]{
+    display: flex;
+    
+    flex-grow: 1;
+    
+    li{
+        display: block;
+        
+        background    : #54e054;
+        border        : 0;
+        border-radius : 4px;
+        cursor        : pointer;
+        margin-left   : auto;
+        margin-right: 2px;
+        padding       : 12px;
+    }
+
+    li[role="focus-btn"]{
+        background: #333;
+        color: #fff;
+    }
+
+    li[role="multi-btn"]{
+        background: transparent;
+        border: 2px solid #aaa;
+        color: #bbb;
     }
 }
