--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -46,7 +46,7 @@ button {
 html, body {
   height: 100%;
   width: 100%;
-  background: #f5f5f5;
+  background: #f9f9f9;
   margin: 0;
   padding: 0;
 }
@@ -154,37 +154,40 @@ ul[id="task-list"] li {
   display: flex;
   border-bottom: 1px dotted #dfdfdf;
   font-size: 13px;
-  padding: 10px;
 }
 /* line 169, ../sass/style.scss */
 ul[id="task-list"] li span {
   width: 70%;
+  padding: 5px;
+  padding-bottom: 0;
 }
 
-/* line 176, ../sass/style.scss */
+/* line 179, ../sass/style.scss */
 ul[class="task-specific-btn-list"] {
   display: flex;
+  height: 40px;
   flex-grow: 1;
+  justify-content: flex-end;
 }
-/* line 181, ../sass/style.scss */
+/* line 186, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li {
   display: block;
   background: #54e054;
   border: 0;
-  border-radius: 4px;
   cursor: pointer;
-  margin-left: auto;
-  margin-right: 2px;
-  padding: 12px;
+  padding: 0 12px;
 }
-/* line 193, ../sass/style.scss */
+/* line 195, ../sass/style.scss */
+ul[class="task-specific-btn-list"] li i {
+  line-height: 40px;
+}
+/* line 200, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li[role="focus-btn"] {
   background: #333;
   color: #fff;
 }
-/* line 198, ../sass/style.scss */
+/* line 206, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li[role="multi-btn"] {
   background: transparent;
-  border: 2px solid #aaa;
   color: #bbb;
 }
