--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -51,7 +51,7 @@ button {
      height     : 100%;
      width      : 100%;
      
-     background : #f5f5f5;
+     background : #f9f9f9;
      margin     : 0;
      padding    : 0;
  }
@@ -164,40 +164,48 @@ ul[id="task-list"]{
         
         border-bottom : 1px dotted #dfdfdf;
         font-size     : 13px;
-        padding       : 10px;
+        // padding       : 10px;
         
         span{
-            // width: calc((100% / 3) * 2);
-            width: 70%;
+            // width       : calc((100% / 3) * 2);
+            width          : 70%;
+
+            padding        : 5px;
+            padding-bottom : 0;
         }
     }
 }
 
 ul[class="task-specific-btn-list"]{
-    display: flex;
+    display : flex;
+    height  : 40px;
     
     flex-grow: 1;
+    justify-content: flex-end;
     
     li{
         display: block;
         
         background    : #54e054;
         border        : 0;
-        border-radius : 4px;
+        // border-radius : 4px 0 0 4px;
         cursor        : pointer;
-        margin-left   : auto;
-        margin-right: 2px;
-        padding       : 12px;
-    }
+        padding       : 0 12px;
 
+        i{
+            line-height: 40px;
+        }
+    }
+    
     li[role="focus-btn"]{
+        // vertical-align: top;
         background: #333;
         color: #fff;
     }
 
     li[role="multi-btn"]{
         background: transparent;
-        border: 2px solid #aaa;
+        // border: 2px solid #aaa;
         color: #bbb;
     }
 }
