--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -6,6 +6,7 @@
  * 01.00 Timer Section
  * 01.01 Focus Button List
  * 02.00 Task list Container
+ * 3.00 Task list main buttons
  *
  */
 /** 00.01 GLOBAL & IMPORTS **/
@@ -13,14 +14,14 @@
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/solid.min.css");
 @import url("../../../node_modules/@fortawesome/fontawesome-free/css/regular.min.css");
 @import url("https://fonts.googleapis.com/css?family=PT+Sans&display=swap");
-/* line 24, ../sass/style.scss */
+/* line 25, ../sass/style.scss */
 * {
   box-sizing: border-box;
   color: #333;
   position: relative;
 }
 
-/* line 31, ../sass/style.scss */
+/* line 32, ../sass/style.scss */
 textarea,
 select,
 input,
@@ -28,21 +29,21 @@ button {
   outline: none;
 }
 
-/* line 38, ../sass/style.scss */
+/* line 39, ../sass/style.scss */
 ul, li {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-/* line 44, ../sass/style.scss */
+/* line 45, ../sass/style.scss */
 button {
   border: 0;
   background: inherit;
   cursor: pointer;
 }
 
-/* line 50, ../sass/style.scss */
+/* line 51, ../sass/style.scss */
 html, body {
   height: 100%;
   width: 100%;
@@ -51,42 +52,42 @@ html, body {
   padding: 0;
 }
 
-/* line 59, ../sass/style.scss */
+/* line 60, ../sass/style.scss */
 body {
   display: flex;
   flex-direction: column;
 }
 
 /** 01.00 Timer Section **/
-/* line 66, ../sass/style.scss */
+/* line 67, ../sass/style.scss */
 section[id="timer-container"] {
   background: #3fed3f;
 }
 
-/* line 71, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 ul[id="timer-display"] {
   display: flex;
   justify-content: center;
   padding: 15px 0 15px 0;
 }
-/* line 77, ../sass/style.scss */
+/* line 78, ../sass/style.scss */
 ul[id="timer-display"] li {
   list-style-type: none;
   padding: 20px;
 }
-/* line 82, ../sass/style.scss */
+/* line 83, ../sass/style.scss */
 ul[id="timer-display"] .timer-btn {
   line-height: 60px;
 }
 
-/* line 87, ../sass/style.scss */
+/* line 88, ../sass/style.scss */
 li[role="time"] time {
   cursor: pointer;
   font-family: DIN Alternate;
   font-size: 50px;
 }
 
-/* line 93, ../sass/style.scss */
+/* line 94, ../sass/style.scss */
 li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
   border: 3px solid #333;
   border-radius: 100%;
@@ -95,81 +96,89 @@ li[role="stop-time-btn"] i, li[role="pause-time-btn"] i {
   padding: 8px;
 }
 
-/* line 103, ../sass/style.scss */
-div[role="progress-bar-track"] {
-  height: 10px;
+/* line 105, ../sass/style.scss */
+div[role="progress-bar-track"], .ui-progressbar {
+  height: 10px !important;
   width: 100%;
-  background: rgba(17, 17, 17, 0.2);
+  background: rgba(17, 17, 17, 0.2) !important;
+  border: 0 !important;
+  border-radius: 0 !important;
 }
-/* line 109, ../sass/style.scss */
-div[role="progress-bar-track"] span[role="progress-bar"] {
+/* line 113, ../sass/style.scss */
+div[role="progress-bar-track"] span[role="progress-bar"], div[role="progress-bar-track"] .ui-progressbar-value, .ui-progressbar span[role="progress-bar"], .ui-progressbar .ui-progressbar-value {
   display: block;
   height: 100%;
   width: 30%;
-  background: rgba(17, 17, 17, 0.5);
+  background: rgba(17, 17, 17, 0.5) !important;
+  border: 0 !important;
+  border-radius: 0 !important;
 }
 
 /** 01.01 Focus Button List **/
-/* line 120, ../sass/style.scss */
+/* line 126, ../sass/style.scss */
 ul[id="focus-btn-list"] {
   background: rgba(9, 194, 40, 0.7);
   display: flex;
   justify-content: center;
   padding: 15px 0;
 }
-/* line 127, ../sass/style.scss */
+/* line 133, ../sass/style.scss */
 ul[id="focus-btn-list"] button {
   display: flex;
   width: 180px;
   font-size: 16px;
 }
-/* line 134, ../sass/style.scss */
+/* line 140, ../sass/style.scss */
 ul[id="focus-btn-list"] span {
   width: 100%;
   text-align: center;
 }
-/* line 139, ../sass/style.scss */
+/* line 145, ../sass/style.scss */
 ul[id="focus-btn-list"] span i {
   margin-right: 5px;
 }
 
 /** 02.00 Task list Container **/
-/* line 147, ../sass/style.scss */
+/* line 153, ../sass/style.scss */
 section[id="task-list-container"] {
   flex-grow: 2;
   padding: 10px;
   padding-bottom: 0;
 }
 
-/* line 153, ../sass/style.scss */
+/* line 159, ../sass/style.scss */
 ul[id="task-list"] {
+  display: flex;
   height: 100%;
   width: 100%;
   border: 2px solid #dfdfdf;
   background: #fff;
+  flex-direction: column;
   font-family: "PT Sans", Courier, monospace;
+  overflow: hidden;
 }
-/* line 162, ../sass/style.scss */
+/* line 170, ../sass/style.scss */
 ul[id="task-list"] li {
   display: flex;
   border-bottom: 1px dotted #dfdfdf;
   font-size: 13px;
 }
-/* line 169, ../sass/style.scss */
+/* line 177, ../sass/style.scss */
 ul[id="task-list"] li span {
   width: 70%;
   padding: 5px;
   padding-bottom: 0;
 }
 
-/* line 179, ../sass/style.scss */
+/* line 187, ../sass/style.scss */
 ul[class="task-specific-btn-list"] {
   display: flex;
   height: 40px;
   flex-grow: 1;
   justify-content: flex-end;
+  text-align: center;
 }
-/* line 186, ../sass/style.scss */
+/* line 195, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li {
   display: block;
   background: #54e054;
@@ -177,17 +186,27 @@ ul[class="task-specific-btn-list"] li {
   cursor: pointer;
   padding: 0 12px;
 }
-/* line 195, ../sass/style.scss */
+/* line 204, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li i {
   line-height: 40px;
 }
-/* line 200, ../sass/style.scss */
+/* line 209, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li[role="focus-btn"] {
   background: #333;
   color: #fff;
 }
-/* line 206, ../sass/style.scss */
+/* line 215, ../sass/style.scss */
 ul[class="task-specific-btn-list"] li[role="multi-btn"] {
   background: transparent;
   color: #bbb;
+}
+
+/** 03.00 Task list main buttons **/
+/* line 224, ../sass/style.scss */
+li[id="task-list-main-btns"] {
+  border-bottom: 0 !important;
+  border-top: 2px solid #dfdfdf;
+  display: block;
+  margin-top: auto;
+  padding: 20px;
 }
