--- a/src/style/sass/style.scss
+++ b/src/style/sass/style.scss
@@ -8,6 +8,7 @@
  * 01.00 Timer Section
  * 01.01 Focus Button List
  * 02.00 Task list Container
+ * 3.00 Task list main buttons
  *
  */
 
@@ -100,18 +101,23 @@ li[role="stop-time-btn"] i, li[role="pause-time-btn"] i{
     padding       : 8px;
 }
 
-div[role="progress-bar-track"]{
-    height : 10px;
+
+div[role="progress-bar-track"], .ui-progressbar{
+    height : 10px !important;
     width  : 100%;
 
-    background: transparentize(#111, .8);
+    background: transparentize(#111, .8) !important;
+    border: 0 !important;
+    border-radius: 0 !important;
 
-    span[role="progress-bar"]{
+    span[role="progress-bar"], .ui-progressbar-value{
         display : block;
         height  : 100%;
         width   : 30%;
 
-        background : transparentize(#111, .5);
+        background : transparentize(#111, .5) !important;
+        border: 0 !important;
+        border-radius: 0 !important;
     }
 }
 
@@ -151,13 +157,15 @@ section[id="task-list-container"]{
 }
 
 ul[id="task-list"]{
-    height: 100%;
-    width: 100%;
+    display : flex;
+    height  : 100%;
+    width   : 100%;
 
     border: 2px solid #dfdfdf;
     background: #fff;
-    // border-radius: 4px 4px 0 0;
+    flex-direction: column;
     font-family: "PT Sans", Courier, monospace;
+    overflow: hidden;
 
     li{
         display: flex;
@@ -177,11 +185,12 @@ ul[id="task-list"]{
 }
 
 ul[class="task-specific-btn-list"]{
-    display : flex;
-    height  : 40px;
+    display         : flex;
+    height          : 40px;
     
-    flex-grow: 1;
-    justify-content: flex-end;
+    flex-grow       : 1;
+    justify-content : flex-end;
+    text-align      : center;
     
     li{
         display: block;
@@ -208,4 +217,14 @@ ul[class="task-specific-btn-list"]{
         // border: 2px solid #aaa;
         color: #bbb;
     }
+}
+
+/** 03.00 Task list main buttons **/
+
+li[id="task-list-main-btns"]{
+    border-bottom: 0 !important;
+    border-top: 2px solid #dfdfdf;
+    display: block;
+    margin-top : auto;
+    padding    : 20px;
 }
